--- a/static/css/apps/reports.css
+++ b/static/css/apps/reports.css
@@ -34,6 +34,10 @@
   }
 
   .report-section {
+    margin-bottom: 1.5rem;
+  }
+
+  .report-section:last-child {
     margin-bottom: 0;
   }
 
