--- a/static/css/cards.css
+++ b/static/css/cards.css
@@ -6,7 +6,3 @@
   margin-bottom: 1.25rem;
   padding: 1.25rem 1rem 1.5rem;
 }
-
-.card > .list-group {
-  border: none;
-}
