--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -12,7 +12,8 @@
   padding: 0 1rem;
 }
 
-.detail > .list-group {
+.detail > .list-group,
+.card > .list-group {
   border: none;
 }
 
@@ -29,6 +30,7 @@ Detail Layout (header / subnav / body)
 /* Detail Header - title/toolbar area */
 .detail-header {
   background: var(--background-subnav);
+  border-radius: var(--radius-md) var(--radius-md) 0 0;
   padding: 1.25rem 1rem 0.5rem;
 }
 
@@ -88,17 +90,26 @@ Detail Layout (header / subnav / body)
 
 .subnav .active::before {
   left: calc(-1 * var(--radius-md));
-  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath d='M8,0 L8,8 L0,8 A8,8 0 0,0 8,0 Z' fill='white'/%3E%3C/svg%3E");
-  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath d='M8,0 L8,8 L0,8 A8,8 0 0,0 8,0 Z' fill='white'/%3E%3C/svg%3E");
+  -webkit-mask-image: var(--mask-tab-left);
+  mask-image: var(--mask-tab-left);
 }
 
 .subnav .active::after {
-  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath d='M0,0 L0,8 L8,8 A8,8 0 0,1 0,0 Z' fill='white'/%3E%3C/svg%3E");
-  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath d='M0,0 L0,8 L8,8 A8,8 0 0,1 0,0 Z' fill='white'/%3E%3C/svg%3E");
+  -webkit-mask-image: var(--mask-tab-right);
+  mask-image: var(--mask-tab-right);
   right: calc(-1 * var(--radius-md));
 }
 
 .subnav li:first-child.active {
+  border-radius: var(--radius-md) var(--radius-md) 0 0;
+}
+
+.subnav li:first-child.active::before {
+  display: none;
+}
+
+/* Round top corners when subnav is first child (no header above) */
+.detail > .subnav:first-child {
   border-radius: var(--radius-md) var(--radius-md) 0 0;
 }
 
